@@ -1,15 +1,0 @@
-<Addin id = "Mono.Debugging"
-       name	     = "Managed Debugging Engine"
-       author	 = "Ankit Jain, Lluis Sanchez"
-       url       = "http://www.mono-project.com"
-       description = "Managed Debugging Engine"
-       copyright   = "MIT X11"
-       isroot      = "true"
-       version   = "0.1">
-
-	<ExtensionPoint path="/Mono/Debugging/DebuggerFactories">
-		<Description>Debug session factories. Specified classes must implement Mono.Debugging.IDebuggerSessionFactory.</Description>
-		<ExtensionNode name="DebuggerFactory" />
-	</ExtensionPoint>
-
-</Addin>
