@@ -26,8 +26,6 @@
     <File name="Mono.Debugging.Client/ThreadEventArgs.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Debugging.Backend/IBacktrace.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Debugging.Backend/IDebuggerSessionFrontend.cs" subtype="Code" buildaction="Compile" />
-    <File name="Mono.Debugging.Backend/DebuggerExtensionNode.cs" subtype="Code" buildaction="Compile" />
-    <File name="Mono.Debugging.addin.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="Mono.Debugging.Client/BreakpointStore.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Debugging.Client/BreakpointEventArgs.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Debugging.Client/ObjectValue.cs" subtype="Code" buildaction="Compile" />
@@ -47,7 +45,6 @@
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-    <ProjectReference type="Gac" localcopy="True" refto="Mono.Addins, Version=0.3.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Xml, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </References>
   <GtkDesignInfo gtkVersion="2.8.3" />
