@@ -1,3 +1,9 @@
+2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Debugging.addin.xml, Mono.Debugging.mdp,
+	  Mono.Debugging.Backend/DebuggerExtensionNode.cs, Makefile.am:
+	  Remove Mono.Addins dependency.
+
 2008-08-07  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Debugging.Client/BreakpointStore.cs: Fire the change event when
